--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -36,3 +36,6 @@ team:
   defaults: {_controller: AppBundle:User:myTeam}
 
 
+sendEmail:
+  path: /sendEmail
+  defaults: {_controller: AppBundle:Admin:index}
