--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,4 +66,7 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
+    encryption: '%mailer_encryption%'
+    port: '%mailer_port%'
+    auth_mode: '%mailer_auth_mode%'
     spool: { type: memory }
