--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,7 +43,7 @@ security:
 
             logout:
                 path:   /logout
-                target: /
+                target: /login
 
     access_control:
             #user anonim
@@ -51,7 +51,7 @@ security:
           - { path: ^/register,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/addFreeDays, roles: ROLE_ADMIN}
           - { path: ^/addTeam, roles: ROLE_ADMIN}
-#          - { path: ^/, roles: ROLE_USER}
-          - { path: ^/myteam, roles: ROLE_USER}
+          - { path: ^/, roles: ROLE_ADMIN}
+          - { path: ^/account, roles: ROLE_USER}
 
 
