--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -89,6 +89,7 @@ services:
         arguments:
               - '@calendarService'
               - '@userManager'
+              - '@AppBundle\Repository\DayOffRepository'
 
     AppBundle\Controller\AdminController:
         class: AppBundle\Controller\AdminController
