--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,10 +1,6 @@
 home:
   path:     /
-  defaults: { _controller: AppBundle:User:index}
-
-blank:
-  path: /blank
-  defaults: { _controller: AppBundle:Default:blank}
+  defaults: { _controller: AppBundle:Default:index}
 
 registration:
   path: /register
@@ -17,25 +13,22 @@ login:
 logout:
   path: /logout
 
-addTeam:
+add_team:
   path: /addTeam
   defaults: {_controller: AppBundle:Admin:addTeam}
 
-freeDays:
+add_free_days:
   path: /addFreeDays
   defaults: {_controller: AppBundle:Admin:addFreeDays}
-  methods: GET
 
-addFreeDays:
-  path: /addFreeDays
-  defaults: {_controller: AppBundle:Admin:addFreeDays}
-  methods: POST
-
-team:
-  path: /myteam
+account:
+  path: /account
   defaults: {_controller: AppBundle:User:myTeam}
 
-
-sendEmail:
+send_email:
   path: /sendEmail
   defaults: {_controller: AppBundle:Admin:index}
+
+delete_day_off:
+  path: /deleteDayOff/{id}
+  defaults: {_controller: AppBundle:User:deleteDayOff}
