--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -51,7 +51,7 @@ security:
           - { path: ^/register,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/addFreeDays, roles: ROLE_ADMIN}
           - { path: ^/addTeam, roles: ROLE_ADMIN}
-          - { path: ^/, roles: ROLE_ADMIN}
+#          - { path: /, roles: ROLE_ADMIN}
           - { path: ^/account, roles: ROLE_USER}
 
 
