--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -37,5 +37,14 @@ monolog:
         #    type: chromephp
         #    level: info
 
+#swiftmailer:
+#    delivery_addresses: ['andreeateo554@gmail.com']
+# Swiftmailer Configuration
 swiftmailer:
-    delivery_addresses: ['andreeateo554@gmail.com']
+#    delivery_address: ['andreeateo554@gmail.com']
+    transport: gmail
+#    host: ~
+    username: andreea.spoeala
+    password: lyranvumvhyoqayq
+    delivery_addresses: ['andreea.spoeala@gmail.com']
+#    spool: { type: memory }
