--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -62,13 +62,9 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-#    delivery_address: ['andreeateo554@gmail.com']
     transport: '%mailer_transport%'
-    host: '%mailer_host%'
+#    host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-#    encryption: '%mailer_encryption%'
-#    port: '%mailer_port%'
-#    auth_mode: '%mailer_auth_mode%'
-    delivery_addresses: ['andreea.spoeala@gmail.com']
+    delivery_addresses: [andreea_spoeala@yahoo.com]
     spool: { type: memory }
