--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,8 +63,8 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: '%mailer_transport%'
-#    host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-    delivery_addresses: ['andreea_spoeala@yahoo.com']
-    spool: { type: memory }
+    port: '%mailer_port%'
+#    spool: { type: memory }
+
