[feature] Move the free day to another day+bugfixing

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -96,6 +96,7 @@ services:
               - '@calendarService'
               - '@userManager'
               - '@AppBundle\Repository\DayOffRepository'
+              - '@AppBundle\Repository\TableHolidaysForEmployeeRepository'
 
     AppBundle\Controller\AdminController:
         class: AppBundle\Controller\AdminController
